Se prepara para subir a render